# tiddlydesktop-rs

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  TIDDLYDESKTOP_RS_OVERVIEW.md  android-version.txt  index.html  package-lock.json  package.json  privacy-policy.html  tiddlydesktop-rs.desktop
.github/workflows/: release.yml
TiddlyWiki5/editions/tiddlydesktop/: tiddlywiki.info
TiddlyWiki5/editions/tiddlydesktop-rs/tiddlers/: SiteTitle.tid
TiddlyWiki5/editions/tiddlydesktop/output/: index.html
TiddlyWiki5/editions/tiddlydesktop/tiddlers/: SiteTitle.tid
TiddlyWiki5/plugins/tiddlywiki/codemirror-6-collab/: plugin.info  readme.tid
TiddlyWiki5/plugins/tiddlywiki/codemirror-6-collab/files/: collab.js
TiddlyWiki5/plugins/tiddlywiki/tiddlydesktop-rs/: AppVersion.tid  AutoSaveConfig.tid  DefaultTiddlers.tid  EditionSelector.tid  EmptyMessage.tid  PluginInstaller.tid  ShareTemplates.tid  WikiList.tid  detect-android.js  disable-shortcuts-mac.multids  disable-shortcuts-not-mac.multids  disable-shortcuts.multids  platform-macros.js  saver.js  startup-language.js  startup.js  styles.tid
TiddlyWiki5/plugins/tiddlywiki/tiddlydesktop-rs-commands/: action-run-command.js  config.tid  permission-status.tid  plugin.info  readme.tid  startup.js
TiddlyWiki5/plugins/tiddlywiki/tiddlydesktop-rs/images/: folder-icon.tid  logo.tid
TiddlyWiki5/plugins/tiddlywiki/tiddlydesktop-rs/macros/: td-lingo.js
TiddlyWiki5/plugins/tiddlywiki/tiddlydesktop-rs/message-handlers/: convert-wiki.js  set-language.js  set-palette.js
packaging/arch/: PKGBUILD  PKGBUILD-git
scripts/: build-arch-pkg.sh  build-tarball.sh  setup-node.sh
src/: index.html  loading.html  main.js  wiki-loader.html
src-tauri/: Cargo.toml  Claude.md  Info.plist  about.hbs  about.toml  build.rs  index.html  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.macos.no-nodejs.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/nsis/: enable-lan-sync.bat  installer.nsi
src-tauri/patches/: wry+0.53.5.patch
src-tauri/resources/tdlib/: media-controls.css
src-tauri/resources/tiddlywiki/plugins/tiddlywiki/codemirror-6-collab/: plugin.info  readme.tid
src-tauri/resources/tiddlywiki/plugins/tiddlywiki/codemirror-6-collab/config/: enabled.tid
src-tauri/resources/tiddlywiki/plugins/tiddlywiki/codemirror-6-collab/files/: collab.js  tiddlywiki.files
src-tauri/src/: clipboard.rs  fs_abstraction.rs  index.html  init_script.rs  ipc.rs  lib.rs  main.rs  media_server.rs  pdf_renderer.rs  permissions.rs  quickjs_runtime.rs  tiddlywiki_html.rs  types.rs  utils.rs  wiki_server.rs  wiki_storage.rs
src-tauri/src/android/: AndroidManifest.xml  CaptureActivity.kt  LanSyncService.kt  MainActivity.kt  OpenWithActivity.kt  QuickCaptureWidgetProvider.kt  RecentWikisWidgetProvider.kt  WikiActivity.kt  WikiHttpServer.kt  WikiServerService.kt  WikiWidgetService.kt  build.gradle.kts  folder_wiki_server.rs  mod.rs  multicast.rs  node_bridge.rs  proguard-wikiactivity.pro  saf.rs  wiki_activity.rs
src-tauri/src/android/quickjs/: fs_module.rs  mod.rs  path_module.rs  runtime.rs
src-tauri/src/android/res/drawable/: ic_widget_capture.xml  widget_background.xml
src-tauri/src/android/res/layout/: widget_item.xml  widget_layout.xml  widget_quick_capture.xml
src-tauri/src/android/res/values/: strings.xml  themes.xml  widget_colors.xml
src-tauri/src/android/res/values-ar/: strings.xml
src-tauri/src/android/res/values-b+ia/: strings.xml
src-tauri/src/android/res/values-ca/: strings.xml
src-tauri/src/android/res/values-cs/: strings.xml
src-tauri/src/android/res/values-da/: strings.xml
src-tauri/src/android/res/values-de/: strings.xml
src-tauri/src/android/res/values-de-rAT/: strings.xml
src-tauri/src/android/res/values-de-rCH/: strings.xml
src-tauri/src/android/res/values-el/: strings.xml
src-tauri/src/android/res/values-en-rGB/: strings.xml
src-tauri/src/android/res/values-en-rPH/: strings.xml
src-tauri/src/android/res/values-es/: strings.xml
src-tauri/src/android/res/values-fa/: strings.xml
src-tauri/src/android/res/values-fr/: strings.xml
src-tauri/src/android/res/values-hi/: strings.xml
src-tauri/src/android/res/values-it/: strings.xml
src-tauri/src/android/res/values-iw/: strings.xml
src-tauri/src/android/res/values-ja/: strings.xml
src-tauri/src/android/res/values-ko/: strings.xml
src-tauri/src/android/res/values-mk/: strings.xml
src-tauri/src/android/res/values-night/: themes.xml  widget_colors.xml
src-tauri/src/android/res/values-nl/: strings.xml
src-tauri/src/android/res/values-pa/: strings.xml
src-tauri/src/android/res/values-pl/: strings.xml
src-tauri/src/android/res/values-pt/: strings.xml
src-tauri/src/android/res/values-pt-rBR/: strings.xml
src-tauri/src/android/res/values-ru/: strings.xml
src-tauri/src/android/res/values-sk/: strings.xml
src-tauri/src/android/res/values-sl/: strings.xml
src-tauri/src/android/res/values-sv/: strings.xml
src-tauri/src/android/res/values-zh-rCN/: strings.xml
src-tauri/src/android/res/values-zh-rHK/: strings.xml
src-tauri/src/android/res/values-zh-rTW/: strings.xml
src-tauri/src/android/res/xml/: widget_info.xml  widget_quick_capture_info.xml
src-tauri/src/drag_drop/: encoding.rs  input_inject.rs  linux.rs  macos.rs  mod.rs  sanitize.rs  windows.rs  windows_job.rs
src-tauri/src/drag_drop/native_dnd/: mod.rs  native_dnd_wayland.rs  native_dnd_x11.rs
src-tauri/src/init_script/: conflict_ui.js  core.js  drag_drop.js  favicon_sync.js  filesystem.js  internal_drag.js  lan_sync.js  main.js  media.js  peer_status.js  session_auth.js  sync.js  title_sync.js  window.js
src-tauri/src/lan_sync/: android_bridge.rs  attachments.rs  bridge.rs  client.rs  conflict.rs  discovery.rs  mod.rs  pairing.rs  protocol.rs  server.rs  wiki_info.rs
src-tauri/src/relay_sync/: connection.rs  github_auth.rs  mod.rs
src-tauri/src/saf_plugin/: mod.rs
src-tauri/wix/: kill-running-app.wxs
(+35 files in other folders)
