[package]
name = "tiddlydesktop-rs"
version = "0.0.51"
description = "A TiddlyWiki Tauri App"
authors = ["BurningTreeC"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tiddlydesktop_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tokio = { version = "1.49.0", features = ["fs", "sync", "rt"] }
base64 = "0.22.1"
chrono = "0.4.43"
urlencoding = "2.1.3"
regex = "1.10"

# Path simplification for Windows (removes \\?\ prefixes)
dunce = "1.0"

# For setting PR_SET_PDEATHSIG on Linux (kill child when parent dies)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
gtk = "0.18"
gdk = "0.18"
glib = "0.18"
webkit2gtk = "2.0.1"

# Windows drag-drop handling via native OLE APIs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
] }
windows-core = "0.61"
lazy_static = "1.5"
# WebView2 COM bindings for accessing ICoreWebView2Controller4.AllowExternalDrop
webview2-com = "0.38"

# macOS drag-drop handling via objc2 (versions must match Tauri's objc2 dependency)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSDictionary", "NSObject", "NSURL", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSPasteboard", "NSDragging", "NSResponder"] }
block2 = "0.6"
lazy_static = "1.5"

