[package]
name = "tiddlydesktop-rs"
version = "0.2.72"
description = "A TiddlyWiki Tauri App"
authors = ["BurningTreeC"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tiddlydesktop_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tokio = { version = "1.49.0", features = ["fs", "sync", "rt"] }
base64 = "0.22.1"
chrono = "0.4.43"
urlencoding = "2.1.3"
regex = "1.10"

# Locale detection for UI language
sys-locale = "0.3"

# Path simplification for Windows (removes \\?\ prefixes)
dunce = "1.0"
rand = "0.9.2"
dirs = "6.0.0"

# For setting PR_SET_PDEATHSIG on Linux (kill child when parent dies)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
gtk = "0.18"
gdk = "0.18"
glib = "0.18"
webkit2gtk = "2.0.1"
cairo-rs = "0.18"
pango = "0.18"
pangocairo = "0.18"
# Input emulation for resetting WebKitGTK pointer state after GTK drag
# - x11rb: for X11 (uses XTest) - works without user permission
# Note: libei on Wayland requires RemoteDesktop portal permission dialog - too intrusive!
# So on Wayland we use the mousedown fallback in JavaScript instead.
enigo = { version = "0.6", default-features = false, features = ["x11rb"] }
# Native Wayland drag-and-drop via wl_data_device protocol
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
# Native X11 drag-and-drop via XDND protocol
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

# Windows content drag-drop handling via OLE APIs (for external app content drops)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
] }
lazy_static = "1.5"
# Using forked webview2-com with DragStarting API (SDK 1.0.3719.77)
webview2-com = { git = "https://github.com/BurningTreeC/webview2-rs", branch = "main" }
# Required for implementing COM interfaces (ICoreWebView2DragStartingEventHandler)
windows-implement = "0.60"
windows-core = "0.61"
image = { version = "0.25", default-features = false, features = ["png"] }

# macOS drag-drop handling via objc2 (versions must match Tauri's objc2 dependency)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSDictionary", "NSObject", "NSURL", "NSGeometry", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSPasteboard", "NSDragging", "NSDraggingItem", "NSDraggingSession", "NSImage", "NSResponder", "NSEvent", "NSBitmapImageRep", "NSGraphicsContext"] }
block2 = "0.6"
lazy_static = "1.5"

